--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ CGAN_mnist
 ACGAN_mnist
 ACGAN_mnist_2
 Improved DCGAN
+Improved DCGAN BM
+Improved DCGAN BIGGER
+Improved DCGAN 2 GEN 1 DIS 1
+Improved DCGAN 2 GEN 1 DIS
+Improved DCGAN 2
+Improved DCGAN 1 GEN 3 DIS
+Improved DCGAN 1 GEN 2 DIS
