--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ CGAN_1
 CGAN_4
 CGAN_3
 CGAN_mnist
-ACGAN_mnist
-ACGAN_mnist_2
+ACGAN
+ACGAN 2
 Improved DCGAN
 Improved DCGAN BM
 Improved DCGAN BIGGER
